Decreases switch statements and deprecates BytesMessageEncoder
Signed-off-by: Adrian Cole <adrian@tetrate.io>